tests/ui/error-codes/E0432.rs
//@ revisions: edition2015 edition2018
//@ [edition2015] edition: 2015
//@ [edition2018] edition: 2018..
use something::Foo; //~ ERROR E0432

fn main() {}
